# broad

./: .gitignore  main.py  pyproject.toml
bots/: __init__.py
bots/github_bot/: __init__.py  __main__.py  github.py  run.py
bots/paper_summary_bot/: __init__.py  run_bot.py
bots/research_paper_bot/: README.md  __init__.py  run_bot.py  state.py
bots/wiki_bot/: __init__.py  run.py
broad/llm/: __init__.py  base.py  ollama.py  openai.py  openai_llm.py
broad/utils/: env.py  file.py
broad/utils/website/: arxiv.py
broad_docker/: postgres_compose.yaml
cli/: __init__.py
mds/: PAPER_SUMMARY.md
utils/: markdown.py  path.py  pdf.py
utils/www/: arxiv.py
