[project]
name = "broad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=3.0.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "pypdf>=6.10.1",
    "typer>=0.24.1",
]
